--- a/exercise2/exercise2/Styles/FanClub.css
+++ b/exercise2/exercise2/Styles/FanClub.css
@@ -1,35 +1,83 @@
-﻿
-
-h2#FanClubTitle{
+﻿h2#FanClubTitle{
     font-size: 28px;
 	line-height: 44px;
-	padding: 22px 0;
+	padding: 10px 0;
     color:  darkcyan;
 }
+
 table{
     padding-bottom: 20px;
 }
-th, td {
+
+th td{
     border: 1px solid black;
-    text-align: left;
-    width: 5%;
+    text-align: center;
+    width: 10%;
     text-align:center;
     padding-top:5px;
 }
-td#crude{
-    width:10%;
+
+th {
+    background-color: honeydew;
 }
-td.strict {
-    width:10%;
+
+td{
+    background-color: aliceblue;
 }
 .link{
-    background-color:gainsboro;
-    border:groove;
+    background-color:paleturquoise ;
+    font: bold 11px Arial;
+    text-decoration: none;
+    color: #333333;
+    padding: 8px 8px 8px 8px;
+    border-top: 1px solid yellow;
+    border-right: 1px solid yellow;
+    border-bottom: 1px solid yellow;
+    border-left: 1px solid yellow;
+    
 }
-.form-group {
-    border: double;
+
+.form-horizontal{
+    border: 5px thick #1F497D;
+    background: #F0F0F0;
+    border-radius: 5px;
+    padding: 5px;
 }
-.col-md-10{
-    padding-left:60px;
+
+.text-danger {
+    display: block;
+    color: red;
+}
+
+.form-control.text-box.single-line{
+    height:auto;
+    max-width : 50%;
+}
+
+.btn{
+    background-color: paleturquoise;
+}
+
+.table-horizontal{
+    border: 3px solid #1F497D;
+    background: #F0F0F0;;
+    border-radius: 5px;
+    width: 300px;
+    margin-bottom:15px;
+}
+
+.table-horizontal th{
+    text-align: left;
+    padding-bottom:6px;
+    padding-top:6px;
+    width: 100px;
+    background-color: cornsilk;
+}
+
+.table-horizontal td{
+    text-align: left;
+    padding-bottom:6px;
+    padding-top:6px;
+    background-color: cornsilk;
 }
 
