--- a/exercise2/exercise2/Views/FanClub/Create.cshtml
+++ b/exercise2/exercise2/Views/FanClub/Create.cshtml
@@ -4,17 +4,15 @@
     ViewBag.Title = "Create";
 }
 @section head {
-    <link href="~/STyles/FanClub.css" )" rel="stylesheet" type="text/css" />
+    <link href="~/Styles/FanClub.css" rel="stylesheet" type="text/css" />
 }
-<h2 id="FanClubTitle">Add New Fan</h2>
+<h2 id="FanClubTitle">Add New Fan:</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Fan</h4>
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -29,14 +27,6 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Gender, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Gender)
-                @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -57,6 +47,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Gender, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EnumDropDownListFor(model => model.Gender)
+                @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
@@ -64,6 +62,6 @@
     </div>
 }
 
-<div>
+<p>
     @Html.ActionLink("Back to List", "Index", null, new { @class = "link" })
-</div>
+</p>
