--- a/exercise2/exercise2/Views/FanClub/Details.cshtml
+++ b/exercise2/exercise2/Views/FanClub/Details.cshtml
@@ -4,58 +4,36 @@
     ViewBag.Title = "Details";
 }
 @section head {
-    <link href="~/STyles/FanClub.css" )" rel="stylesheet" type="text/css" />
+    <link href="~/Styles/FanClub.css" rel="stylesheet" type="text/css" />
 }
 <h2 id="FanClubTitle">Details</h2>
 
 <div>
-    <h4>Fan</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.BirthDate)
-        </dt>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Gender)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Gender)
-        </dd>
-
-        <dd>
-            @Html.DisplayFor(model => model.BirthDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Seniority)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Seniority)
-        </dd>
-
-    </dl>
+    <table class="table-horizontal">
+        <tr>
+            <th>@Html.DisplayNameFor(model => model.Name)</th>
+            <td>@Html.DisplayFor(model => model.Name)</td>
+        </tr>
+        <tr>
+            <th>@Html.DisplayNameFor(model => model.LastName)</th>
+            <td>@Html.DisplayFor(model => model.LastName)</td>
+        </tr>
+        <tr>
+            <th>@Html.DisplayNameFor(model => model.Gender)</th>
+            <td>@Html.DisplayFor(model => model.Gender)</td>
+        </tr>
+        <tr>
+            <th>@Html.DisplayNameFor(model => model.BirthDate)</th>
+            <td>@Html.DisplayFor(model => model.BirthDate)</td>
+        </tr>
+        <tr>
+            <th>@Html.DisplayNameFor(model => model.Seniority)</th>
+            <td>@Html.DisplayFor(model => model.Seniority)</td>
+        </tr>    
+    </table>
 </div>
 <p>
+    @Html.ActionLink("Back to List", "Index", null, new { @class = "link" })
     @Html.ActionLink("Edit", "Edit", new { id = Model.ID }, new { @class = "link" })
     @Html.ActionLink("Delete", "Delete", new { id = Model.ID }, new { @class = "link" })
-    @Html.ActionLink("Back to List", "Index", null, new { @class = "link" })
 </p>
