--- a/exercise2/exercise2/Views/Shared/_Layout.cshtml
+++ b/exercise2/exercise2/Views/Shared/_Layout.cshtml
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
+    <link href="~/Content/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="~/Styles/base.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
-    @RenderSection("head")
+    @RenderSection("head" , required: false)
 </head>
 <body>
     <audio autoplay><source src="~/music/song.mp3" type="audio/mpeg"></audio>
