Styles.Render , audio

--- a/Blog/Blog/Views/FanClub/Edit.cshtml
+++ b/Blog/Blog/Views/FanClub/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 @section head {
-    <link href="~/Styles/FanClub.css" rel="stylesheet" type="text/css" />
+    @Styles.Render("~/Styles/FanClub.css")
 }
 <h2 id="FanClubTitle">Edit</h2>
 
