--- a/Blog/Blog/Views/FanClub/Error.cshtml
+++ b/Blog/Blog/Views/FanClub/Error.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Error";
 }
 @section head {
-    <link href="~/Styles/FanClub.css" rel="stylesheet" type="text/css" />
+    @Styles.Render("~/Styles/FanClub.css")
 }
 
 @{
