--- a/Blog/Blog/Views/Home/Index.cshtml
+++ b/Blog/Blog/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
     ViewBag.Title = "Index";
 }
 
+<audio controls autoplay><source src="~/music/song.mp3" type="audio/mpeg" controls="controls"></audio>
+
 <section id="search">
     <!-- Search -->
     <form action="#" method="POST">
