--- a/Blog/Blog/Views/FanClub/Delete.cshtml
+++ b/Blog/Blog/Views/FanClub/Delete.cshtml
@@ -5,7 +5,7 @@
 }
 
 @section head {
-    <link href="~/Styles/FanClub.css" rel="stylesheet" type="text/css" />
+    @Styles.Render("~/Styles/FanClub.css")
 }
 
 <h2 id="FanClubTitle">Are you sure you want to delete this fan?</h2>
