--- a/Blog/Blog/Views/FanClub/Details.cshtml
+++ b/Blog/Blog/Views/FanClub/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Details";
 }
 @section head {
-    <link href="~/Styles/FanClub.css" rel="stylesheet" type="text/css" />
+    @Styles.Render("~/Styles/FanClub.css")
 }
 <h2 id="FanClubTitle">Details</h2>
 
