--- a/Blog/Blog/Views/FanClub/Index.cshtml
+++ b/Blog/Blog/Views/FanClub/Index.cshtml
@@ -2,7 +2,7 @@
 @model IEnumerable<Blog.Models.Fan>
 
 @section head {
-    <link href="~/Styles/FanClub.css" rel="stylesheet" type="text/css" />
+    @Styles.Render("~/Styles/FanClub.css")
 }
 
 @{
