--- a/Blog/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Blog/Views/Shared/_Layout.cshtml
@@ -17,8 +17,8 @@
     <nav>
         <!-- Navigation -->
         <ul>
+            <li class="selected">@Html.ActionLink("Home", "Index", "BlogGuests")</li>
             <li class="selected">@Html.ActionLink("Blog", "Index", "Blog")</li>
-            <li><a href="#">About</a></li>
             <li>@Html.ActionLink("Fan Club", "Index", "FanClub")</li>
             <li><a href="#">Contact</a></li>
             <li class="limage">
