--- a/Blog/Blog/Styles/base.css
+++ b/Blog/Blog/Styles/base.css
@@ -373,17 +373,10 @@ aside section ul li a:hover {
 	color: #000;
 }
 
-.blogPost div {
-	/* Column-count not implemented yet */
-	-moz-column-count: 2;
-	-webkit-column-count: 2;
-	
-	/* Column-gap not implemented yet */
-	-moz-column-gap: 22px;
-	-webkit-column-gap: 22px;
-}
 
 .blogPost img {
+    width: 200px;
+    height: 200px;
 	margin: 22px 0;
 	-webkit-box-shadow: 3px 3px 7px #777;
 }
