--- a/Blog/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Blog/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Ha-Blog Shel Shauli</h1>
+        <h1 id="title">Ha-Blog Shel Shauli</h1>
     </header>
 
     <nav>
@@ -19,7 +19,7 @@
         <ul>
             <li class="selected">@Html.ActionLink("Home", "Index", "BlogGuests")</li>
             <li class="selected">@Html.ActionLink("Blog", "Index", "Blog")</li>
-            <li>@Html.ActionLink("Fan Club", "Index", "FanClub")</li>
+            <li class="selected">@Html.ActionLink("Fan Club", "Index", "FanClub")</li>
             <li><a href="#">Contact</a></li>
             <li class="limage">
                 <div id="transDemo2">
