--- a/Blog/Blog/Views/Blog/Create.cshtml
+++ b/Blog/Blog/Views/Blog/Create.cshtml
@@ -39,7 +39,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group">  @* @Html.HiddenFor(x => @DateTime.Now) *@
             @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
