--- a/Blog/Blog/Views/Blog/Create.cshtml
+++ b/Blog/Blog/Views/Blog/Create.cshtml
@@ -4,7 +4,11 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+@section head {
+    @Styles.Render("~/Styles/blog.css")
+}
+
+<h2 id="BlogTitle">Add new post</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,8 +16,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Post</h4>
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -39,12 +41,8 @@
             </div>
         </div>
 
-        <div class="form-group">  @* @Html.HiddenFor(x => @DateTime.Now) *@
-            @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
-            </div>
+        <div class="form-group">  
+            @Html.HiddenFor(model => model.Date, new { @Value = DateTime.Now }) 
         </div>
 
         <div class="form-group">
@@ -54,35 +52,41 @@
                 @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        <div class="form-group">
+   
+        <div class="form-group" id="img">
+            @Html.CheckBox("imageCheck")
             @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control" } })
+                <div class="image1">
+                    @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
                 @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        <div class="form-group">
+        
+        <div class="form-group" id="vid"> 
+            @Html.CheckBox("videoCheck")        
             @Html.LabelFor(model => model.Video, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Video, new { htmlAttributes = new { @class = "form-control" } })
+                <div class="video1">
+                    @Html.EditorFor(model => model.Video, new { htmlAttributes = new { @class = "form-control" }} )
+                </div>
                 @Html.ValidationMessageFor(model => model.Video, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default link" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+<p>
+    @Html.ActionLink("Back to List", "Index", null, new { @class = "link" })
+</p>
 
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<script src="~/Scripts/jquery.validate.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+@section scripts {
+    <script type="text/javascript" src="~/scripts/funcs.js"></script>
+}
