--- a/Blog/Blog/Views/FanClub/Delete.cshtml
+++ b/Blog/Blog/Views/FanClub/Delete.cshtml
@@ -38,9 +38,9 @@
     {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
+        <p class="form-actions no-color">
             <input type="submit" value="Delete" class="link" />
             @Html.ActionLink("Back to List", "Index", null, new { @class = "link" })
-        </div>
+        </p>
     }
 </div>
